# genftqc

./: CMakeLists.txt  README.md
src/genftqc/: multiply_gates.py
src/genftqc/cpp_src/: CMakeLists.txt  cayley_graph.cpp  cayley_graph.h  cayley_graph_main.cpp  cayley_graph_wrapper.cpp  cayley_graph_wrapper.h
src/genftqc/task_6/: generate_codes.py  generate_codes2.py  verify_task6.py
task_examples/: easy.md
